Creating repository and domain

--- a/server/src/MinhaVida.CodeChallege.VaccinationManagement.API/MinhaVida.CodeChallege.VaccinationManagement.API.csproj
+++ b/server/src/MinhaVida.CodeChallege.VaccinationManagement.API/MinhaVida.CodeChallege.VaccinationManagement.API.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Microsoft.Azure.Storage.DataMovement" Version="0.8.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="3.0.0" />
