Creating route to change photo

--- a/server/src/MinhaVida.CodeChallege.VaccinationManagement.API/appsettings.json
+++ b/server/src/MinhaVida.CodeChallege.VaccinationManagement.API/appsettings.json
@@ -14,5 +14,9 @@
   },
   "Mongo": {
     "ConnectionString": "mongodb://localhost:27017"
+  },
+  "Storage": {
+    "ConnectionString": "UseDevelopmentStorage=true",
+    "Name": "vaccination-management"
   }
 }
