--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
   serverApi:
-    image: curso.api:prod
+    image: vaccine.management.api:prod
     build: 
       context: ./server
       dockerfile: Dockerfile.prod
@@ -11,7 +11,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Production
 
   client:
-    image: curso.client:prod
+    image: vaccine.management.client:prod
     build: 
       context: ./client
       dockerfile: Dockerfile.prod
