--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -3,35 +3,48 @@ events { worker_connections 1024; }
 
 http {
 
-    sendfile on;
+	sendfile on;
 
-    upstream serverApi {
-        server serverApi_1:8286;
-        server serverApi_2:8286;
-        server serverApi_3:8286;
-        server serverApi_4:8286;
-    }
+	upstream serverApi {
+		server serverApi_1:8286;
+		server serverApi_2:8286;
+		server serverApi_3:8286;
+		server serverApi_4:8286;
+	}
 
-    # Client
-    server {
-        listen 80;
-        location / {
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_pass http://client:4200/;
-        }
-    }
-    # API Server
-    server {
-        listen 8286;
-        location / {
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_pass http://serverApi;
-        }
-    }
+	# Client
+	server {
+		listen 80;
+		location / {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+			proxy_pass http://client:4200/;
+		}
+	}
+	# API Server
+	server {
+		listen 8286;
+		location / {
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+			proxy_pass http://serverApi;
+
+			# Simple requests
+			if ($request_method ~* "(GET|POST)") {
+				add_header "Access-Control-Allow-Origin"  *;
+			}
+
+			# Preflighted requests
+			if ($request_method = OPTIONS ) {
+				add_header "Access-Control-Allow-Origin"  *;
+				add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
+				add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept";
+				return 200;
+			}
+		}
+	}
 }
