--- a/server/src/MinhaVida.CodeChallege.VaccinationManagement.API/appsettings.json
+++ b/server/src/MinhaVida.CodeChallege.VaccinationManagement.API/appsettings.json
@@ -13,7 +13,8 @@
     }
   },
   "Mongo": {
-    "ConnectionString": "mongodb://minhavida:minhavida123@ds018248.mlab.com:18248/vaccine-management"
+    "ConnectionString": "mongodb://localhost:27017/db",
+    "Name": "db"
   },
   "Storage": {
     "ConnectionString": "UseDevelopmentStorage=true",
