Fix returns router

--- a/server/src/MinhaVida.CodeChallege.VaccinationManagement.API/appsettings.json
+++ b/server/src/MinhaVida.CodeChallege.VaccinationManagement.API/appsettings.json
@@ -19,5 +19,8 @@
   "Storage": {
     "ConnectionString": "UseDevelopmentStorage=true",
     "Name": "vaccination-management"
-  }
+  },
+  "PeopleOptions": {
+    "DefaultUrlImage": "http://localhost/assets/img/default.img"
+  }  
 }
